css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*::selection {
  background: #ffb7b7cb;
}

html {
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  scroll-behavior: smooth;
}

html,
body {
  overflow-x: hidden !important;
}

body {
  font-family: "Poppins", sans-serif;
}

.all-content {
  position: relative;
  overflow-x: hidden !important;
}

a {
  text-decoration: none;
  color: #222222;
}

nav {
  display: flex;
  justify-content: end;
  padding: 1rem 5rem;
  background: transparent;
  position: fixed;
  width: 100%;
  color: #222222;
  z-index: 1000;
}

ul {
  display: flex;
  list-style: none;
  align-items: center;
}

ul li {
  position: relative;
  font-size: 1.2rem;
  margin-left: 4rem;
}

ul li a {
  transition: all 200ms ease;
}

ul li a:hover {
  color: #0040ff;
  transition: all 250ms ease;
}

ul li a::after {
  content: "";
  display: block;
  position: absolute;
  width: 16px;
  height: 16px;
  margin-left: -8px;
  bottom: -40%;
  left: 50%;
  border-left: 1px solid #0040ff;
  border-bottom: 1px solid #0040ff;
  -webkit-transform: rotate(-180deg);
  transform: rotate(-180deg);
  opacity: 0;
}

ul li a:hover::after {
  content: "";
  display: block;
  position: absolute;
  width: 16px;
  height: 16px;
  margin-left: -8px;
  bottom: -40%;
  left: 50%;
  border-left: 1px solid #0040ff;
  border-bottom: 1px solid #0040ff;
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 1;
  transition: all 250ms ease;
}

.name-logo {
  position: fixed;
  left: 50%;
  top: 50%;
  color: #222222;
  cursor: default;
  transform: translate(-50%, -50%) scale(6);
  z-index: 1001;
  font-weight: 400;
  font-size: 1.45rem;
  white-space: nowrap;
}

.name-logo-alt {
  position: fixed;
  top: 2%;
  left: 6%;
  color: #222222;
  font-weight: 400;
  font-size: 1.45rem;
  z-index: 1001;
  opacity: 0;
}

.name-background {
  height: 3rem;
  min-width: 1020px;
  background: #e489007e;
  position: absolute;
  top: 54%;
  left: 50%;
  transform: translate(-50%, -50%);
  transition: transform ease;
  border: 2px solid #222222;
}

.typing-text-container {
  /* color: rgb(100, 100, 100); */
  color: transparent;
  -webkit-text-stroke: 1px rgb(58, 58, 58);
  position: absolute;
  top: 59%;
  left: 30%;
  overflow: hidden;
  font-size: 2rem;
}

.typing-text-cursor {
  display: inline-block;
  width: 2px;
  background-color: rgb(21, 21, 21);
  animation: blink 1s infinite;
}

.typing-text-cursor.is-typing {
  animation: none;
}

.home {
  height: 100vh;
  background-color: #e9e1dc;
  border-bottom: 1px solid #222222;
  overflow-x: hidden;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
}

.home-square {
  height: 25rem;
  width: 25rem;
  background: #2b60ff;
  position: absolute;
  top: 68%;
  right: -1%;
  border: 2px solid #222222;
  z-index: 100;
}

.home-circle {
  height: 32rem;
  width: 32rem;
  border-radius: 50%;
  background: #e48900;
  position: absolute;
  top: -30%;
  left: 2%;
  border: 1px solid #222222;
}

/* Projects section */

.projects {
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #e7e7e7;
  border-bottom: 1px solid #222222;
  padding: 6rem;
  position: relative;
  overflow: hidden;
}

.projects-square {
  position: absolute;
  height: 380px;
  width: 380px;
  border: 1px solid #222222;
  border-radius: 2%;
  top: 8%;
  left: 4%;
  transform: rotate(25deg);
}

.projects-cross {
  position: absolute;
  bottom: -5%;
  left: -5%;
  transform: rotate(45deg);
  z-index: 2;
}

.projects-triangle {
  position: absolute;
  top: 45%;
  right: 4%;
  transform: rotate(15deg);
}

.projects-title {
  letter-spacing: 0.2rem;
  color: transparent;
  -webkit-text-stroke: 1px rgb(58, 58, 58);
  margin: 0 0 6rem 0;
  z-index: 100;
  font-size: 2.5rem;
}

.projects-container {
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.project-cards-row {
  display: flex;
  justify-content: center;
}

.project {
  z-index: 10;
  border: 2px solid #222222;
  max-width: 42%;
  position: relative;
  display: flex;
  flex-direction: column;
}

.project-1,
.project-3 {
  margin-bottom: 60px;
  margin-right: 60px;
}

.project-2,
.project-4 {
  align-self: flex-end;
}

.project .content {
  padding: 20px;
  background-color: #e9e1dc;
  border-top: 2px solid #222222;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.project .content h4 {
  font-size: 1.1rem;
  color: #222222;
  letter-spacing: 0.1rem;
  margin-bottom: 7px;
}

.project .content p {
  margin-bottom: 15px;
  color: #222222;
}

.project img {
  max-width: 100%;
  margin-bottom: -8px;
}

.project-links {
  margin-top: 2.5rem;
}

.project-btn {
  position: relative;
  background: transparent;
  border: none;
}

.button-background {
  border-radius: 5%;
  border: 1px solid #222222;
  padding: 7px;
  font-size: 1rem;
  width: 100%;
  height: 100%;
  color: black;
  transition: all 100ms ease;
  display: flex;
}

.project-1 .button-background {
  background: #f2b666b6;
}

.project-2 .button-background {
  background: #5d81efb6;
}

.project-3 .button-background {
  background: #e89898b6;
}

.project-4 .button-background {
  background: #98c379b6;
}

.project-btn:hover .button-background {
  box-shadow: -3px 3px 0px 0px #222222;
  position: relative;
  transform: translate(4px, -4px);
  transition: all 100ms ease;
  cursor: pointer;
}

.second-button {
  margin-left: 8px;
}

/* About Section */

.about {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #e9e1dc;
  position: relative;
  z-index: 1;
  border-bottom: 1px solid #222222;
  overflow: hidden;
}

.about-section-title {
  letter-spacing: 0.2rem;
  color: transparent;
  -webkit-text-stroke: 1px rgb(58, 58, 58);
  margin: 40px 0px;
  font-size: 2.5rem;
}

.about-content {
  display: flex;
  width: 90%;
  justify-content: center;
  align-items: center;
  margin-top: 10px;
  margin-bottom: 80px;
}

.about-text {
  position: relative;
  width: 600px;
  z-index: 101;
  right: -30px;
}

.about-text-title-container {
  border: 1px solid #222222;
  padding: 12px 30px;
  background-color: #2b60ff;
}

.about-personal-description {
  color: #222222;
  padding: 24px 84px 24px 24px;
  line-height: 1.7;
}

.about-text-title-container h1 {
  margin-bottom: 0.5rem;
  color: #e9e1dc;
  font-size: 2.7rem;
  letter-spacing: 0.1rem;
  font-weight: 300;
}

.headshot {
  height: 560px;
  width: auto;
  position: relative;
  border: 2px solid #222222;
  background-color: #e9e1dc;
  z-index: 100;
  left: -30px;
}

.curved-line {
  position: absolute;
  width: 100%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* Contact section */

.contact {
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #e7e7e7;
  padding: 6rem;
  border-bottom: 1px solid #222222;
}

.contact-title {
  position: relative;
  white-space: nowrap;
}

.contact-title-background {
  position: absolute;
  top: 38px;
  width: 324px;
  left: -10px;
  background-color: #e489007e;
  border: 1px solid rgb(58, 58, 58);
  height: 22px;
  z-index: 1;
}

.contact h1 {
  position: relative;
  font-size: 3rem;
  letter-spacing: 0.2rem;
  color: transparent;
  -webkit-text-stroke: 1px rgb(58, 58, 58);
  margin-bottom: 40px;
  z-index: 10;
  text-align: center;
}

.med-mobile-break {
  display: none;
}

.small-mobile-break {
  display: none;
}

.contact-content {
  line-height: 2;
  color: #222222;
  text-align: center;
}

.contact-link {
  color: #df8600;
  position: relative;
  transition: all 100ms ease;
}

.contact-link::after {
  content: "";
  position: absolute;
  width: 106%;
  height: 1px;
  background-color: black;
  top: 50%;
  left: -3%;
  transform: scaleX(0);
  transform-origin: left center;
  transition: transform 450ms cubic-bezier(1, 0, 0, 1);
}

.contact-link:hover::after {
  transform: scaleX(1);
  transition: transform 450ms cubic-bezier(1, 0, 0, 1);
}

/* .contact-link:hover {
  text-shadow: 0px -12px #df8600, 0px 12px #df8600;
  transition: all 100ms ease;
} */

.contact-email {
  display: flex;
  position: relative;
  margin-bottom: 40px;
  cursor: pointer;
  align-items: center;
  height: 80px;
  width: auto;
  border: 1px solid #222222;
  width: 40%;
  overflow: hidden;
  min-width: 343px;
}

.email-hover {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: transparent;
  cursor: pointer;
  transition: background-color 200ms ease;
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
}

.copy-text {
  opacity: 0;
  color: #e7e7e7;
  transition: opacity 200ms ease;
  font-size: 1.3rem;
}

.email-icon {
  padding: 0 40px;
  border-right: 1px solid #222222;
  box-sizing: border-box;
  height: 100%;
  align-items: center;
  display: flex;
}

.email-address {
  margin-right: auto;
  margin-left: auto;
  z-index: 1;
  transition: opacity 200ms ease;
}

/* Footer */

footer {
  padding: 1.5rem 6rem;
  background-color: #e9e1dc;
  color: #222222;
  display: flex;
  justify-content: space-between;
}

footer div {
  display: flex;
  justify-content: space-between;
}

footer img {
  width: 20px;
  height: 20px;
}

footer a:not(:nth-child(1)) {
  margin-left: 25px;
}

/* CSS Animations */

@-webkit-keyframes blink {
  0% {
    background-color: rgb(21, 21, 21);
  }
  25% {
    background-color: rgb(21, 21, 21);
  }
  50% {
    background-color: transparent;
  }
  75% {
    background-color: transparent;
  }
  100% {
    background-color: rgb(21, 21, 21);
  }
}
@keyframes blink {
  0% {
    background-color: rgb(21, 21, 21);
  }
  25% {
    background-color: rgb(21, 21, 21);
  }
  50% {
    background-color: transparent;
  }
  75% {
    background-color: transparent;
  }
  100% {
    background-color: rgb(21, 21, 21);
  }
}

